Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-author: David Anderson
-title: 
+author: David Mathew Anderson
+title: Rising from the Ashes
 header-img: img/home-bg.png
 email: matandersonlv@hotmail.com
-copyright_name: David Anderson
+copyright_name: David Mathew Anderson
 description: > # this means to ignore newlines until "baseurl:"
-  
+  My journey through PTSD and being a Suicide Survivor
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  mat0829
