Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.png
 email: matandersonlv@hotmail.com
 copyright_name: David Mathew Anderson
 description: > # this means to ignore newlines until "baseurl:"
-  My journey through PTSD and being a Suicide Survivor
+  My Journey  to becoming a Web Developer
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  mat0829
